The inets application must be started before this.

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -8,6 +8,7 @@
          stdlib,
          sasl,
          lager,
+         inets,
          lifeguard_graphite
         ]},
        {rel, "start_clean", "",
